# dovecot-fts-flatcurve

./: .gitignore  AUTHORS  Dockerfile  Makefile.am  README.md  autogen.sh  bun.lockb  configure.ac  fts-flatcurve-config.h.in  package-lock.json  package.json
.github/actions/dovecot-fts-flatcurve-test/: Dockerfile  action.yml  dovecot.conf  dovecot.conf.no_substring  entrypoint.sh  fts-flatcurve-test.sh  fts-test
.github/actions/dovecot-fts-flatcurve-test/configs/: dovecot.conf  dovecot.conf.issue-10  dovecot.conf.issue-11  dovecot.conf.issue-9  dovecot.conf.no_substring  dovecot.conf.optimize_limit  dovecot.conf.sharding  passwd-file
.github/actions/dovecot-fts-flatcurve-test/imaptest/: fts-test  fts-test.mbox  issue-11  issue-9  large_mailbox  multiple-current-db  optimize_limit  small_mailbox  virtual
.github/actions/dovecot-fts-flatcurve-test/imaptest/issue-10/: issue-10
.github/actions/dovecot-fts-flatcurve-test/imaptest/issue-27/: default.mbox  issue-27
.github/actions/dovecot-fts-flatcurve-test/imaptest/issue-35/: issue-35
.github/actions/dovecot-fts-flatcurve-test/imaptest/phrase_search/: phrase_search
.github/actions/dovecot-fts-flatcurve-test/imaptest/sharding/: default.mbox  sharding  sharding-2
.github/actions/flatcurve-test/: action-alpine.yml  action-ubuntu.yml  fts-flatcurve-test.sh
.github/actions/flatcurve-test-alpine/: Dockerfile  action.yml
.github/actions/flatcurve-test-debian/: Dockerfile  action.yml
.github/actions/flatcurve-test-ubuntu/: Dockerfile  action.yml
.github/actions/flatcurve-test/configs/: dovecot.conf.issue-27  dovecot.conf.virtual
.github/actions/flatcurve-test/imaptest/: default.mbox  multiple-current-populate  virtual
.github/actions/flatcurve-test/imaptest/phrase_search/: default.mbox  phrase_search
.github/common/: fts-flatcurve-test.sh
.github/common/configs/: dovecot.conf.issue-11  dovecot.conf.issue-38  dovecot.conf.issue-54  dovecot.conf.no_substring  dovecot.conf.optimize_limit  dovecot.conf.xapian-query-keywords
.github/common/configs/virtual/All/: dovecot-virtual
.github/common/configs/virtual/Onlyinbox/: dovecot-virtual
.github/common/imaptest/: concurrent-index  issue-61  multiple-current-test  multiple-current-test2  xapian-query-keywords
.github/common/imaptest/issue-10/: default.mbox
.github/common/imaptest/issue-27/: default.mbox  issue-27
.github/common/imaptest/issue-35/: default.mbox
.github/common/imaptest/issue-38/: default.mbox  issue-38
.github/common/imaptest/issue-44/: .issue-35.swp  default.mbox  issue-44
.github/common/imaptest/issue-62/: default.mbox  issue-62
.github/workflows/: deploy.yml  docker-publish.yml  documentation.yml  main.yml  testing.yml
dev/: build_env.sh
docker/: dovecot.conf
docs/: DOCS.md  benchmarks.md  compilation.md  configuration.data.js  configuration.md  datastorage.md  debug.md  design.md  docker.md  doveadm.data.js  doveadm.md  eol.md  events.md  index.md  license.md  requirements.md  testing.md  thanks.md  what.md  why.md
docs/.vitepress/: config.js  config.mts  config.ts
docs/components/: ConfigurationComponent.vue  DoveadmComponent.vue  EventsComponent.vue
docs/data/: configuration.data.js  doveadm.data.js  events.data.js
src/: Makefile.am  doveadm-fts-flatcurve.c  fts-backend-flatcurve-xapian.cpp  fts-backend-flatcurve-xapian.h  fts-backend-flatcurve.c  fts-backend-flatcurve.h  fts-flatcurve-plugin.c  fts-flatcurve-plugin.h
test/: Dockerfile  README.md  dovecot.conf  dovecot.sh  podman_cores.sh  podman_deploy.sh
